<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:columnCount="4"
    tools:context="com.example.watcher.project02.MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_span="4"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="end|center_vertical"
            android:text="@string/result"
            android:textColor="@android:color/white"
            android:textSize="65sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnC"
            style="@style/ButtonStylePort"
            android:onClick="clear"
            android:text="@string/btnC" />

        <Button
            android:id="@+id/btnPM"
            style="@style/ButtonStylePort"
            android:onClick="setPlusMinus"
            android:text="@string/btnPM" />

        <Button
            android:id="@+id/btnPercent"
            style="@style/ButtonStylePort"
            android:onClick="onClickOperators"
            android:text="@string/btnPercent" />

        <Button
            android:id="@+id/btnDivide"
            style="@style/OperatorsPort"
            android:onClick="onClickOperators"
            android:text="@string/btnDivide" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn7"
            style="@style/ButtonStylePort"
            android:onClick="onButtonClick"
            android:text="@string/btn7" />

        <Button
            android:id="@+id/btn8"
            style="@style/ButtonStylePort"
            android:onClick="onButtonClick"
            android:text="@string/btn8" />

        <Button
            android:id="@+id/btn9"
            style="@style/ButtonStylePort"
            android:onClick="onButtonClick"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/btnMultiply"
            style="@style/OperatorsPort"
            android:onClick="onClickOperators"
            android:text="@string/btnMultiply" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn4"
            style="@style/ButtonStylePort"
            android:onClick="onButtonClick"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/btn5"
            style="@style/ButtonStylePort"
            android:onClick="onButtonClick"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/btn6"
            style="@style/ButtonStylePort"
            android:onClick="onButtonClick"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/btnMinus"
            style="@style/OperatorsPort"
            android:onClick="onClickOperators"
            android:text="@string/btnMinus" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn1"
            style="@style/ButtonStylePort"
            android:onClick="onButtonClick"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btn2"
            style="@style/ButtonStylePort"
            android:onClick="onButtonClick"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btn3"
            style="@style/ButtonStylePort"
            android:onClick="onButtonClick"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/btnPlus"
            style="@style/OperatorsPort"
            android:onClick="onClickOperators"
            android:text="@string/btnPlus" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn0"
            style="@style/ButtonStylePort"
            android:layout_columnWeight="2"
            android:layout_span="2"
            android:gravity="center"
            android:onClick="onButtonClick"
            android:text="@string/btn0" />

        <Button
            android:id="@+id/btnPoint"
            style="@style/ButtonStylePort"
            android:onClick="onButtonClick"
            android:text="@string/btnPoint" />

        <Button
            android:id="@+id/btnEquals"
            style="@style/OperatorsPort"
            android:onClick="equal"
            android:text="@string/btnEquals" />
    </TableRow>
</TableLayout>
